opam-version: "1.2"
maintainer:   "thomas@gazagnaire.org"
homepage:     "https://github.com/ocaml/ocaml-ci-scripts"
bug-reports:  "https://github.com/ocaml/ocaml-ci-scripts/issues"
dev-repo:     "https://github.com/ocaml/ocaml-ci-scripts.git"
doc:          "https://ocaml.github.io/ocaml-ci-scripts/"

authors: [
  "Thomas Gazagnaire"
  "Richard Mortier"
  "David Sheets"
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build}
  "jsonm" {build}
  "opam-file-format" {build}
]
